a crawling script that walks a local development instance for content issues
- uses playwright
- dumps a report in JSON, the file name of which has been added to .gitignore
- after hosting the site locally, run `npm run site-check` to drive through the site
- implemented using claude/ML

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "prettify": "./scripts/prettify.sh",
     "copy:vendor": "bash scripts/copy-vendor.sh",
-    "postinstall": "npm run copy:vendor"
+    "postinstall": "npm run copy:vendor",
+    "site-check": "node scripts/site-check.js"
   },
   "devDependencies": {
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "playwright": "^1.49.1"
   },
   "dependencies": {
     "animejs": "^4.0.2"
